--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
         "moment": "^2.29.4",
         "qs": "^6.11.2",
         "react-highlight-words": "^0.20.0",
-        "react-icons": "^4.11.0",
-        "stripe": "^14.5.0"
+        "react-icons": "^4.11.0"
     }
 }
